# ghostpost

./: .gitignore  CALLBACK_URL_GUIDE.md  CLAUDE.md  DOCKER_NOVNC_INTEGRATION.md  EXTENSION_INTEGRATION.md  FIRST_TIME_USER_FLOW.md  GEMINI.md  LOGIN_PAGE_SPEC.md  OAUTH_NOVNC_ISSUES.md  PRODUCTION_SETUP.md  README.md  RECOIL_SETUP_SUMMARY.md  REGRESSION_TESTS.md  TECHNICAL_WRITEUP.md  TODO.md  check-callback-url.sh  comment_scraping_spec.md  deploy.md  deploy.sh  docker-compose.yml  docker-deploy.md  docker-run.sh  docker-stop.sh  docker_deploy.md  fix-format.sh  go-to-prod.sh  import_cookies.py  intent.md  nakul_qa_pairs.jsonl  package-lock.json  package.json  pyproject.toml  redeploy.sh  redeploy_legacy.sh  run-backend.sh  run_dashboard.py  scraper-stats.sh  setup-production-browser.sh  setup_cron.sh  setup_venv.sh  (+7 more)
backend/: .dockerignore  .env.example  Dockerfile  REGRESSION_TESTS.md  REPAIR_TOOL_README.md  api_read_tweets.py  auth.py  auth_routes.py  backfill_rag_from_logs.py  backfill_replying_to_pfp.py  better_fetch.py  browser_auth_routes.py  browser_session.py  check_rag_data.py  code_verifiers.json  deploy.sh  design.md  docker-compose.yml  docker-entrypoint.sh  environment.yaml  fetch_and_populate_posted_tweets.py  fetch_tweets.py  full_thread.py  generate_replies.py  get_training_data.py  headless_fetch.py  headless_login.py  list_models.py  logging.py  login.py  main.py  manual_bread_login.py  modal_app.py  nakul_errors.csv  oauth.py  oauth_utils.py  persist_token.py  playwright_config.py  populate_memories_from_tweets.py  post_takes.py  (+38 more)
backend/backend/: __init__.py  account_limits.py  account_routes.py  api_read_tweets.py  auth_routes.py  browser_auth_routes.py  browser_session.py  browserbase_scraper.py  config.py  data_validation.py  exceptions.py  full_thread.py  generate_replies.py  get_training_data.py  headless_fetch.py  index.html  intent_filter.py  intent_to_queries.py  log_interactions.py  main.py  oauth.py  performance_check.py  post_takes.py  posted_tweets.py  posted_tweets_cache.py  read_tweets.py  resolve_imports.py  scheduler.py  scraping_routes.py  tweets_cache.py  user.py  utils.py
backend/backend/auth/: __init__.py  supabase_routes.py
backend/backend/billing/: __init__.py  routes.py  stripe_service.py
backend/backend/browser_management/: __init__.py  browerbase.py  browser_auth_routes.py  context.py  routes.py  sessions.py
backend/backend/data/: cache_manager.py
backend/backend/desktop/: __init__.py  desktop_jobs.py  pairing.py  task_types.py
backend/backend/filtering/: intent_filter.py
backend/backend/migrations/: update_relevant_accounts_schema.sql
backend/backend/rag/: __init__.py  embeddings.py  feedback_extraction.py  retrieval.py
backend/backend/replying/: generate_replies.py
backend/backend/scraping/: browerbase.py
backend/backend/scripts/: backfill_rag_data.py  update_intent_examples.py
backend/backend/testing/: get_training_data.py  test_twitter.py
backend/backend/twitter/: account_limits.py  account_routes.py  auth_routes.py  authentication.py  bread_account_manager.py  bread_accounts.py  bread_context.py  comment_replies.py  comments_routes.py  cookie_import_routes.py  display_progress.py  filtering.py  generate_replies.py  intent_to_queries.py  logging.py  monitoring.py  posted_tweets.py  posting.py  rate_limiter.py  reply_prompt_builder.py  twitter_jobs.py  twitter_router.py
backend/backend/user/: user.py
backend/backend/utlils/: date_utils.py  decorators.py  email.py  llm.py  scheduler.py  supabase_client.py  utils.py
backend/cache/: _AyushGharat_log.jsonl  _AyushGharat_tweets.json  divya_venn_log.jsonl  divya_venn_posted_tweets.json  divya_venn_tweets.json  proudlurker_log.jsonl  proudlurker_tweets.json  scraped_tweets_2.jsonl  storage_state.json  tokens.json  training_data_nakul.jsonl  user_info.json
backend/cache/proudlurker/: tweets_cache.json
backend/migrations/: __init__.py  add_rag_tables.sql  add_scraped_from_summary.py  c113a0d_posted_tweets_to_map.py  convert_existing_tables_to_uuid.sql  convert_users_to_uuid_complete.sql  create_bread_accounts_table.sql  create_rag_tables.sql  create_rag_tables_clean.sql  fix_users_uid_to_uuid.sql  import_cache_to_supabase.py  reclassify_post_types.py  setup_all_tables_uuid.sql
backend/scripts/: update_intent_examples.py
backend/tests/: conftest.py  test_api_scraping.py  test_api_scraping_simple.py  test_api_utils.py  test_build_prompt.py  test_comment_prompt.py  test_cross_user_engagement.py  test_discover_engagement.py  test_discover_recently_posted.py  test_discover_resurrected.py  test_divya_discovery.py  test_full_pipeline.py  test_full_threads.py  test_gathering_comments.py  test_html_entity_decoding.py  test_image_understanding.py  test_intent_filter_migration.py  test_post_types.py  test_posted_tweets_migration.py  test_posting_media.py  test_reply_generation.py  test_thread_context.py  test_thread_scraping.py  test_twitter_api.py  test_user_tweet_filtering.py
daemon/: .env.example  Cargo.toml  Claude.md  EXTENSION_MIGRATION.md  ORCHESTRATION_SPEC.md  README.md  Secrets.toml.example  Shuttle.toml  diary.md  run.sh
daemon/cli/: Cargo.toml
daemon/cli/src/: cli.rs  main.rs
daemon/tauri/: Cargo.toml  tauri.conf.json
daemon/tauri/assets/: consumed-daemon.service
daemon/tauri/src/: browser.rs  config.rs  cookies.rs  main.rs  reddit_research.rs  remote.rs  server.rs  tasks.rs  tray.rs
daemon/tauri/ui/: index.html  main.js  styles.css
daemon/tools/: Cargo.toml
daemon/tools/python/: pyproject.toml
daemon/tools/scrapers/: article.py  article.rs  arxiv.rs  connect_headless.py  extractor.rs  github.rs  goodreads.rs  header.rs  imdb.rs  letterboxd.rs  mod.rs  scrape.py  tweet.py  (+6 more)
extension/: README.md  pyproject.toml  requirements.txt  test.md
extension/documents/: 0-CwgMETPBc.transcript.md
extension/extension/: agent-content-script.js  ai-agent.js  browser-agent.js  cdp-tools.js  content-types.js  cookie-handlers.js  manifest.json  page_capture.js  popup.css  popup.html  popup.js  service_worker.js  substack_agent.js  website-configs.js
(+150 files in other folders)
