[project]
name = "floodme-backend"
version = "0.1.0"
description = "Backend for FloodMe"
requires-python = ">=3.11,<3.12"
dependencies = [
  # Web framework and API
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.6",

  # HTTP requests
  "requests>=2.31.0",

  # Auth & security
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-dotenv>=1.0.0",

  # Database and Supabase
  "supabase>=2.0.0",
  "postgrest>=0.13.0",

  # Web scraping / browser automation
  "playwright>=1.40.0",

  # WebSocket support
  "websockets>=12.0",

  # Data handling
  "pydantic>=2.5.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
