[project]
name = "floodme-backend"
version = "0.1.0"
description = "backend for social media engagement tool"
requires-python = ">=3.11,<3.12"

dependencies = [
  # Web framework and API
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.6",
  # HTTP requests
  "requests>=2.31.0",
  # Auth & security
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-dotenv>=1.0.0",
  # Database and Supabase
  "supabase>=2.0.0",
  "postgrest>=0.13.0",
  # Web scraping / browser automation
  "playwright>=1.40.0",
  "browserbase>=0.3.0",
  # WebSocket support
  "websockets>=12.0",
  # Data handling
  "pydantic>=2.5.0",
  # Background tasks
  "apscheduler>=3.10.0",
  "httpx>=0.28.1",
  # Billing
  "stripe>=7.0.0",
  # Deployment
  "modal>=0.66.0",
  # Scraping / media conversion (used by scraping_routes.py)
  "yt-dlp>=2024.1.0",
  "trafilatura>=1.8.0",
  "faster-whisper>=1.0.0",
  "webvtt-py>=0.5.1",
  "beautifulsoup4>=4.12.0",
  "openai>=1.0.0",
  "pypdf2>=3.0.0",
]

[dependency-groups]

dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "ruff>=0.13.1",
  "yapf>=0.43.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.yapf]
based_on_style = "pep8"
column_limit = 200


[tool.ruff]

# set line length (default 88 like Black)
line-length = 300
# ignore certain error codes
lint.ignore = ["E501"]
# select extra rule sets (flake8-bugbear, isort, etc.)
# E = flake8 errors
# F = pyflakes
# B = flake8-bugbear
# I = isort
# UP = suggest newer python syntax
lint.select = ["E", "F", "B", "I", "UP"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
