[package]
name = "consumed-daemon"
version.workspace = true
edition.workspace = true
description = "Tauri desktop daemon for consumed - receives cookies from Chrome extension"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
consumed-core = { path = "../tools" }

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"

# Async runtime & server
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

# Configuration
directories.workspace = true
dirs.workspace = true
toml.workspace = true

# Environment
dotenvy.workspace = true

# Date handling
chrono.workspace = true

# Image decoding for tray icon
png = "0.17"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# UUID for task IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random delays for retry spacing
rand = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
