[project]
name = "consumed"
version = "0.1.0"
description = "Browser automation for Substack posting (called by Rust CLI)"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "anthropic>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "tweepy>=4.14.0",
    "httpx>=0.27.0",
    "trafilatura>=1.6.0",
    "requests>=2.31.0",
    "marker-pdf>=1.0.0",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.0.0",
    "webvtt-py>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
